[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/pixelated.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/TriggerWarning.gd" type="Script" id=2]
[ext_resource path="res://scenes/SceneTransitionFade.tscn" type="PackedScene" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1026.0
margin_bottom = 815.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 32.7579
margin_top = 45.3572
margin_right = 968.758
margin_bottom = 216.357
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Warning
This game can be triggering for some.
This game contains gore, violence,
frightening sounds and images, and 
themes of mental illness.
Do you wish to proceed?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="."]
margin_left = 166.31
margin_top = 635.0
margin_right = 274.31
margin_bottom = 725.0
custom_fonts/font = ExtResource( 1 )
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Button" parent="."]
margin_left = 561.925
margin_top = 635.0
margin_right = 633.925
margin_bottom = 725.0
custom_fonts/font = ExtResource( 1 )
text = "No"

[node name="SceneTransitionFade" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="No" to="." method="_on_No_pressed"]
